--- a/views/lpe/crearDerecho.twig
+++ b/views/lpe/crearDerecho.twig
@@ -1,104 +1,101 @@
 {% extends "lpe/master.twig" %} {% block linkhead %}
-<link rel="stylesheet" href="{{ baseUrl() }}/assets-lpe/css/wbbtheme.css" /> {% endblock %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
+<link rel="stylesheet" href="{{ baseUrl() }}/assets-lpe/css/sceditor/sceditor-main.css"> {% endblock %} {# ----------------------------------------------------------- #} {% block titulo %}Inicio{% endblock %} {% block body %}
 
 <div class="row">
     <div class="col-xs-10">
-
-        <h2><i class="mdi mdi-plus-box"></i> <b>Nuevo derecho</b></h2>
+        <h2 class="text-primary"><i class="mdi mdi-plus-box"></i> Nuevo derecho</h2>
         <hr>
-        <div class="form-group">
-            <label class="control-label text-primary" for="focusedInput"><span class="badge">1</span> Titulo del derecho</label>
-            <input class="form-control input-lg" id="focusedInput" type="text" placeholder="Escriba aquí...">
-        </div>
-        <hr>
-        <div class="form-group">
-            <label class="control-label"><span class="badge">2</span> Incluya la descripcion del derecho a presentar</label>
-            <textarea class="form-control" rows="2" placeholder="Desarrolle en pocas palabras una descripción de lo que tratará el derecho"></textarea>
-            <span class="help-block">A longer block of help text that breaks onto a new line and may extend beyond one line.</span>
-        </div>
-        <hr>
-        <h4><i class="mdi mdi-plus-box"></i> Secciones del derecho</h4>
-        <ul class="list-group">
-            <li class="list-group-item">
-                <div class="clearfix">
-                    <h5 class="pull-left"><b>Articulo 1</b></h5> <a href="#" class="pull-right" style="font-size:20px;"><i class="mdi mdi-close"></i></a>
+        <form action="" class="formulario derecho">
 
-                </div>
-                <textarea class="form-control" rows="2" placeholder="Escriba aquí el contenido de la seccion..."></textarea>
-            </li>
-            <li class="list-group-item">
-                <a href="#" class="nuevoArticulo btn b<script src=" //ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js "></script>tn-large btn-info  btn-block"><i class="mdi mdi-plus"></i> Agregar una nueva sección</a>
-            </li>
 
-        </ul>
-
-        <div id="listaSecciones">
-            <div class="form-group articulo">
-                <div for="inputEmail" class="col-lg-2 control-label"><a href="#" class="eliminarArticulo"><i class="mdi mdi-close"></i></a> <span class="numSeccion">1.1</span></div>
-                <div class="col-lg-10">
-                    <!--<textarea class="form-control input-sm" rows="2" placeholder="Escriba aquí el contenido de la seccion..."></textarea>-->
-                    <!--<textarea>Easy (and free!) You should check out our premium features.</textarea>-->
-                    <div class="tinymce">  
-
-  <p>
-    This is an example of the inlite theme that got introduced in TinyMCE 4.4 it allows you to edit contents using a distraction free inline toolbar. You can insert images and tables when the caret is placed inside an empty block.
-  </p>
-</div>
-                </div>
+            <div class="form-group">
+                <input id="titulo" class="form-control input-lg bolder" id="focusedInput" type="text" placeholder="Titulo del derecho">
             </div>
-        </div>
-        <a href="#" class="nuevoArticulo btn btn-large btn-info btn-xs"><i class="mdi mdi-plus"></i> sección</a>
-        <hr>
+            <div class="form-group">
+                <textarea name="descripcion" class="form-control" rows="2" placeholder="Descripcion del derecho"></textarea>
+                <span class="help-block"><b>Redacte una descripción del documento.</b> La misma tiene que dar una pequeña introduccion del documento a desarrollar.</span>
+            </div>
+            <hr>
+            <h4 class="text-primary"><i class="mdi mdi-plus-box"></i> Secciones del derecho</h4>
+            <ul class="list-group">
+                <li id="listaSecciones" class="list-group-item">
+                    <div class="clearfix">
+                        <h5 class="pull-left"><b>Articulo 1</b></h5>
 
-        <div class="clearfix">
-            <a href="#" class="btn btn-large btn-default ">Cancelar</a>
-            <a href="#" class="btn btn-lg btn-primary pull-right">Subir nuevo derecho</a>
+                    </div>
+                    <textarea name="cuerpo-1" class=" ">Escriba el contenido del articulo...</textarea>
+                </li>
+                <li id="li-nuevo-articulo" class="list-group-item">
+                    <a id="nuevoArticulo" href="javascript:void(0)" class="btn btn-large btn-info btn-block"><i class="mdi mdi-plus"></i> Agregar una nueva sección</a>
+                </li>
+
+            </ul>
+
+            <div class="clearfix">
+                <a href="#" class="btn btn-large btn-default ">Cancelar</a>
+                <button type="submit" class="btn btn-lg btn-primary pull-right">Subir nuevo derecho</a>
         </div>
+        </form>
     </div>
 </div>
 </div>
 
 {% endblock %} {# ----------------------------------------------------------- #} {% block scripts %}
 <script src="{{ baseUrl() }}/assets-lpe/js/autosize.min.js"></script>
- <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+<script src="{{ baseUrl() }}/assets-lpe/js/sceditor/jquery.sceditor.js"></script>
+<script src="{{ baseUrl() }}/assets-lpe/js/tinymce/tinymce.min.js"></script>
 <script id="articuloTemplate" type="text/template">
-    <div class="form-group articulo">
-        <div for="inputEmail" class="col-lg-2 control-label"><a href="#" class="eliminarArticulo"><i class="mdi mdi-close"></i></a> <span class="numSeccion">${numArticulo}</span></div>
-        <div class="col-lg-10">
-            <textarea name="articulo${numArticulo}" class="form-control input-sm" rows="2" placeholder="Escriba aquí el contenido de la seccion..."></textarea>
+    <li class="list-group-item li-articulo">
+        <div class="clearfix">
+            <h5 class="pull-left"><b>Articulo <span id="span-numArticulo">numArticulo</span></b></h5> <a id="eliminar-numArticulo" href="javascript:void(0)" data-idarticulo='numArticulo' class="eliminarArticulo pull-right" style="font-size:20px;"><i class="mdi mdi-close"></i></a>
         </div>
-    </div>
+        <textarea name="cuerpo-numArticulo">Escriba el contenido del articulo...</textarea>
+    </li>
 </script>
 <script>
-    var articulo = 2;
+    var numeroArticulo = 2;
     $(document).ready(function() {
         //Events
-        $("a.eliminarArticulo").on("click", eliminarArticulo);
+        // $("a.eliminarArticulo").on("click", eliminarArticulo);
         // autosize($('textarea'));
+        iniciarEditor(1);
+
     });
-    $(".nuevoArticulo").click(function(e) {
-        var $holis = $("#articuloTemplate").html().replace("${numArticulo}", "1." + articulo)
-        $("#listaSecciones").append($holis)
-        console.log("aaaaaaa")
-        articulo += 1
+    $("#nuevoArticulo").click(function(e) {
+        var nuevoArticulo = $("#articuloTemplate").html().replace(new RegExp('numArticulo', 'g'), numeroArticulo)
+        $("#li-nuevo-articulo").before(nuevoArticulo)
+        iniciarEditor(numeroArticulo);
+        numeroArticulo += 1
     });
+    $(document.body).on('click', '.eliminarArticulo' ,function(){
+        var i = $(this).data('idarticulo')+1
+        $(this).closest(".li-articulo").remove();
+        for(; i <= numeroArticulo+1; i++){
+            $('#span-'+i).html(i-1).attr('id',"span-"+ (i-1));
+            $('#eliminar-'+i).data('idarticulo',(i-1)).attr('id',"eliminar-"+ (i-1));;
+            $("textarea[name='cuerpo-" + i + "']").attr('name',"cuerpo"+ (i-1))
+        } 
+        numeroArticulo -= 1;       
+    });
+
     var eliminarArticulo = function(e) {
-        console.log("holis");
-        $(this).closest(".articulo").remove();
+        $(this).closest(".li-articulo").remove();
     }
-</script>
-<script>
-tinymce.init({
-  selector: 'div.tinymce',
-  theme: 'inlite',
-  plugins: 'image table link paste contextmenu textpattern autolink',
-  insert_toolbar: 'quickimage quicktable',
-  selection_toolbar: 'bold italic | quicklink h2 h3 blockquote',
-  inline: true,
-  content_css: [
-    '//fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
-    '//www.tinymce.com/css/codepen.min.css'    
-  ]
-});
+
+    var iniciarEditor = function(numero) {
+		$("textarea[name='cuerpo-" + numero + "']").sceditor({
+			plugins: "bbcode",
+			emoticonsEnabled: false,
+			toolbarExclude: "font,color,table,horizontalrule,subscript,superscript",
+			height: '100',
+            resizeMaxHeight: '450',
+			width: '100%',
+			style: "{{ baseUrl() }}/assets-lpe/css/lpe.css",
+			resizeEnabled: false,
+			resizeHeight: true,
+			autoExpand: true
+		});
+    }
+
 </script>
 {% endblock %}
