--- a/views/lpe/login.twig
+++ b/views/lpe/login.twig
@@ -29,6 +29,10 @@
 					<a href="#" class="btn btn-link">Volver</a>
 					<a href="#" class="btn btn-primary ">Entrar <i class="mdi mdi-login-variant"></i></a>
 				</div>
+				<div class="text-right">
+					<br>
+					<a href="#">¿Olvido su usuario y contraseña?</a>
+				</div>
 			</div>
 		</div>
 	</div>
