--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -2,6 +2,8 @@
 @import "bootstrap";
 @import "lpe/bootswatch";
 @import "../css/materialdesignicons.css";
+@import 'https://fonts.googleapis.com/css?family=Slabo+27px';
+
 * {
     margin: 0;
 }
@@ -256,4 +258,54 @@ textarea.form-control.input-lg {
 
 .bolder{
     font-weight: 700;
+}
+
+.titulo-derecho-background {
+padding: 30px 0;
+color: #cdbfe3;
+text-align: center;
+text-shadow: 0 1px 0 rgba(0,0,0,.1);
+background-color: #6f5499;
+background-image: -webkit-gradient(linear,left top,left bottom,from(#563d7c),to(#6f5499));
+background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
+background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
+background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
+background-repeat: repeat-x;
+margin-bottom:40px;
+h1{color:#FFF;}
+}
+
+article{
+span.badge{
+    background-color: $brand-primary;
+}
+#nav-derechos.affix{
+    top:30px
+}
+
+#nav-derechos > a{
+    padding: 10px
+}
+p.intro{
+    font-size: 20px;
+    line-height: 28px;
+    font-family: 'Slabo 27px', serif;
+    color: $gray-darker;
+}
+
+.body-seccion p{
+    font-size: 16px;
+    line-height: 20px;
+    font-family: 'Slabo 27px', serif;
+    color: $gray-darker;
+}
+
+p.comentario{
+    font-size: 12px;
+    line-height: 1.5;
+}
+textarea.comentario{
+    resize: vertical;
+}
 }
