--- a/public/assets-lpe/scss/lpe/_variables.scss
+++ b/public/assets-lpe/scss/lpe/_variables.scss
@@ -29,6 +29,7 @@ $brand-danger:          #e51c23 !default;
 //** Background color for `<body>`.
 $body-bg:               #fff !default;
 //** Global text color on `<body>`.
+// $text-color:            $gray-dark !default;
 $text-color:            $gray !default;
 
 //** Global textual link color.
