Mas trabajo sobre ver Derecho. Ahora Opinion es un modal. Nuevo botones apra dar la importancia a la accion. Agregado espacio para video.

--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -22,6 +22,7 @@
 </head>
 
 <body data-spy="scroll" data-target="#secciones" >
+   
     <div class="wrapper">
 
         <div class="container">
@@ -56,7 +57,7 @@
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#"><i class="mdi mdi-account"></i>Iniciar sesion</a></li>
+                            <li><a href="#"><i class="zmdi zmdi-account-circle zmdi-hc-lg zmdi-hc-fw"></i>Iniciar sesion</a></li>
                         </ul>
                     </div>
                 </div>
