--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "lpe/bootswatch";
 @import "../css/materialdesignicons.css";
+@import "../css/material-design-iconic-font.css";
 @import 'https://fonts.googleapis.com/css?family=Slabo+27px';
 
 * {
@@ -261,19 +262,23 @@ textarea.form-control.input-lg {
 }
 
 .titulo-derecho-background {
-padding: 30px 0;
 color: #cdbfe3;
 text-align: center;
 text-shadow: 0 1px 0 rgba(0,0,0,.1);
-background-color: #6f5499;
-background-image: -webkit-gradient(linear,left top,left bottom,from(#563d7c),to(#6f5499));
-background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
-background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
-background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
+// background-color: #6f5499;
+// background-image: -webkit-gradient(linear,left top,left bottom,from(#563d7c),to(#6f5499));
+// background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
+// background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
+// background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
+// filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
 background-repeat: repeat-x;
 margin-bottom:40px;
+background-size: cover;
 h1{color:#FFF;}
+.overlay{
+    background: rgba(0,0,0,0.3); 
+    padding: 30px 0;
+}
 }
 
 article{
@@ -287,20 +292,13 @@ span.badge{
 #nav-derechos > a{
     padding: 10px
 }
-p.intro{
-    font-size: 20px;
-    line-height: 28px;
-    font-family: 'Slabo 27px', serif;
-    color: $gray-darker;
+p{
+      font-size: 14px;
+      line-height: 21px;
 }
-
-.body-seccion p{
-    font-size: 16px;
-    line-height: 20px;
-    font-family: 'Slabo 27px', serif;
-    color: $gray-darker;
+img.size32{
+    width: 32px;
 }
-
 p.comentario{
     font-size: 12px;
     line-height: 1.5;
@@ -308,4 +306,78 @@ p.comentario{
 textarea.comentario{
     resize: vertical;
 }
+}
+
+// article{
+// span.badge{
+//     background-color: $brand-primary;
+// }
+// #nav-derechos.affix{
+//     top:30px
+// }
+
+// #nav-derechos > a{
+//     padding: 10px
+// }
+// p.intro{
+//     font-size: 20px;
+//     line-height: 28px;
+//     font-family: 'Slabo 27px', serif;
+//     color: $gray-darker;
+// }
+
+// .body-seccion p{
+//     font-size: 16px;
+//     line-height: 20px;
+//     font-family: 'Slabo 27px', serif;
+//     color: $gray-darker;
+// }
+
+// p.comentario{
+//     font-size: 12px;
+//     line-height: 1.5;
+// }
+// textarea.comentario{
+//     resize: vertical;
+// }
+// }
+
+
+.tag-opinion{
+    padding:0;
+    text-align: center;
+    img{
+        left:0;
+    }
+
+    .overlay{
+        background: rgba(0,0,0,0.4);
+        padding: 15px;
+    }
+    h5{
+    color: #FFF;
+    }
+    a:hover{
+        text-decoration: none;
+        
+    }
+}
+
+
+
+// --------------------
+
+.header-opinion{
+    border-radius: 5px;
+    background-size:cover;
+    margin-bottom: 20px;
+    .overlay{
+        background: rgba(0,0,0,0.4);
+        padding: 40px 0 55px;
+        border-radius: 5px;
+    }
+    h3{
+    color: #FFF;
+    } 
+
 }
